_sass/all.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
@import 'navbar';
@import 'footer';
@import 'profile';
@import 'page';
@import "podStats";

.section .section-title {
  background-color: #f2f2f2;
  border-radius: 8px;
  padding: 0.5rem;
  text-align: center;

}

.section h2 {
  color: #333;
  font-size: 1.5rem;
  font-weight: bold;
  margin-bottom: 20px;
  text-transform: uppercase;
}

.card-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  font-family: "Open Sans", sans-serif;
}

.card-container a {
  display: inline;
}

@media only screen and (max-width: 1500px) {
  .card-container {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media only screen and (max-width: 1000px) {
  .card-container {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media only screen and (max-width: 768px) {
  .card-container {
    grid-template-columns: 1fr;
  }
} 


body {
  background-color: #f5f5f9;
  margin-bottom: 50px;
}

h2 {
  margin-bottom: 20px;
  margin-top: 20px;
  font-weight: 700;
  text-align: center;
  color: #000;
}

.card-title, .card-text, .dates, .card-text, small .text-body-secondary{
  color: #000;
}

.firt-card {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 20px 30px;
  background-color: white;
  border-radius: .375rem;
  padding: 1.5em;
  font-size: 1.2em;
  justify-content: center;
}

.row {
  margin: 30px 30px;

}

.card {
    display: flex;
    align-items: center;
    margin: 20px 30px;
    background-color:  #fff;
    border-radius: .375rem;
    padding: 1.5em;
    font-size: 1.2em;
}

a {
  color: #000;
  margin: 20px 30px;
  background-color: white;
  border-radius: .375rem;
  padding: 1.0em;
  font-size: 1.2em;

}

.info {
  p {
    margin-top: 5px;
    margin: 0px;
    text-align: left;
  }

  .title {
    font-size: 500;
    font-weight: bold;
  }

  .location,
  .description {
    font-size: medium;
    font-weight: 400;
  }

  .dates {
      font-size: small;
      color: #404040;
  }

  .social-icon {
    margin-top: 10px;
    width: 30px;
    height: 30px;
    background-repeat: no-repeat;
    background-position: center center;
    text-indent: -9999px; /* hide the link text */
  }
  
    .social-icon:hover {
    width: 40px;
    height: 40px; 
  }
}

.icon {
  width: 70px;
  height: 70px;
  margin-right: 20px;
  padding: 10px;

  img {
    width: 100%;
  }
}

.image-card {
  width: 70px;
  height: 70px;
  border-radius: 0.3em;
  ;
  margin: 1.0em;
  ;

  img {
    width: 100%;
  }
}

